# eaf_base_api

./: DOWNLOADING.md  README.md  pyproject.toml  requirements.txt  setup.py
base_api/: __init__.py  base.py
base_api/modules/: config.py  consts.py  download.py  errors.py  logger.py  progress_bars.py  static_functions.py  type_hints.py
tests/: test_fetch.py  test_hls.py  test_legacy_download.py
