[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[project]
name = "eaf_base_api"
version = "2.5.2"
description = "A base API for EchterAlsFake's Porn APIs"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "LGPL-3.0-or-later"
license-files = ["LICENSE*"]

authors = [
  { name = "Johannes Habel", email = "EchterAlsFake@proton.me" }
]

classifiers = [
  "Programming Language :: Python",
]

dependencies = [
  "httpx[brotli]", # Yes brotli is theoreticalyl not necessary but common it's soooo much faster and more lightweight
]

[project.optional-dependencies]
hls = [
  "m3u8",
  # av needs Python >= 3.10, so guard it (otherwise `pip install ...[hls]` fails on 3.8/3.9)
  "av; python_version >= '3.10'",
]
scraping = ["fake-useragent"]
httpx = ["httpx[socks,http2]"]

[project.urls]
Homepage = "https://github.com/EchterAlsFake/eaf_base_api"
Repository = "https://github.com/EchterAlsFake/eaf_base_api"

[tool.uv]
publish-url = "https://upload.pypi.org/legacy/"

[tool.uv.build-backend]
module-root = ""
module-name = "base_api" # Because I named it differently we need to change here
